Fixed small images having a lot of whitespace

--- a/src/app/components/post/post.component.scss
+++ b/src/app/components/post/post.component.scss
@@ -71,7 +71,7 @@ img {
   grid-area: image;
   width: 100%;
   max-height: 30vh;
-  object-fit: scale-down;
+  object-fit: contain;
 }
 
 header {
